# emerge_uav_sim

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
checkpoints/: best.pt  ckpt_000050.pt  ckpt_000100.pt  ckpt_000150.pt  ckpt_000200.pt  ckpt_000250.pt  ckpt_000300.pt  ckpt_000350.pt  ckpt_000400.pt  ckpt_000450.pt  ckpt_000500.pt  ckpt_000550.pt  ckpt_000600.pt  ckpt_000650.pt  ckpt_000700.pt  ckpt_000750.pt  ckpt_000800.pt  ckpt_000850.pt  ckpt_000900.pt  ckpt_000950.pt  final.pt
configs/: default.yaml
emerge_uav_sim/: __init__.py
emerge_uav_sim.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
emerge_uav_sim/analysis/: role_tracker.py
emerge_uav_sim/config/: configs.py
emerge_uav_sim/core/: comm.py  uav.py  world.py
emerge_uav_sim/envs/: uav_team_env.py
emerge_uav_sim/rendering/: renderer.py  status_panel.py
emerge_uav_sim/training/: buffer.py  mappo.py  networks.py  parallel_trainer.py  training_panel.py
examples/: check_env.py  evaluate.py  random_policy.py  run_policy.py  train_mappo.py
examples/checkpoints/: ckpt_000050.pt  ckpt_000100.pt  ckpt_000150.pt  ckpt_000200.pt  ckpt_000250.pt  ckpt_000300.pt  ckpt_000350.pt  final.pt
tests/: test_env.py
